@@ -1,34 +1,0 @@
-/* substring.c -- extract substring.
-   $Id: substring.c,v 1.5 2007-07-01 21:20:31 karl Exp $
-
-   Copyright (C) 1999, 2004, 2007 Free Software Foundation, Inc.
-
-   This program is free software: you can redistribute it and/or modify
-   it under the terms of the GNU General Public License as published by
-   the Free Software Foundation, either version 3 of the License, or
-   (at your option) any later version.
-
-   This program is distributed in the hope that it will be useful,
-   but WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with this program.  If not, see <http://www.gnu.org/licenses/>.  */
-
-#include "system.h"
-
-char *
-substring (const char *start, const char *end)
-{
-  char *result = xmalloc (end - start + 1);
-  char *scan_result = result;
-  const char *scan = start;
-
-  while (scan < end)
-    *scan_result++ = *scan++;
-
-  *scan_result = 0;
-  return result;
-}
-
